<resources>
    <string name="app_name">Restaurant App</string>

    <string name="hintSearch">Search for dishes</string>
    <string name="items">Items</string>
    <string name="payment_details">Payment Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="view_cart">View Cart</string>
    <string name="browse">Browse</string>
    <string name="famous_dishes">Famous Dishes</string>
</resources>