<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/cuisinesPager"
    android:background="@color/grey_200"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/btnPlaceOrder"
        android:layout_below="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/btnPlaceOrder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCartItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="@dimen/padding_8dp"
                app:layout_constraintBottom_toTopOf="@+id/layoutBill"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtHeadingItems"
                    style="@style/textPrimaryHeadingNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_0dp"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/items"
                    app:layout_constraintBottom_toTopOf="@+id/rvCart"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtHeadingItems" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@drawable/border_bottom"
                android:orientation="vertical"
                android:padding="@dimen/padding_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutCartItems">

                <TextView
                    android:id="@+id/pay"
                    style="@style/textPrimaryHeadingNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_0dp"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/payment_details"
                    app:layout_constraintBottom_toTopOf="@+id/subtotal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subtotal"
                    style="@style/textSecondaryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/subtotal"
                    app:layout_constraintBottom_toTopOf="@+id/cgst"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pay" />

                <TextView
                    android:id="@+id/txtSubTotal"
                    style="@style/textSecondaryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_rupee"
                    android:drawablePadding="2dp"
                    android:padding="@dimen/padding_8dp"
                    app:layout_constraintBottom_toTopOf="@+id/txtCGST"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pay" />

                <TextView
                    android:id="@+id/cgst"
                    style="@style/textSecondaryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/cgst"
                    app:layout_constraintBottom_toTopOf="@+id/sgst"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtotal" />

                <TextView
                    android:id="@+id/txtCGST"
                    style="@style/textSecondaryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_rupee"
                    android:drawablePadding="2dp"
                    android:padding="@dimen/padding_8dp"
                    app:layout_constraintBottom_toTopOf="@+id/sgst"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtotal" />

                <TextView
                    android:id="@+id/sgst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/sgst"
                    app:layout_constraintBottom_toTopOf="@+id/total"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cgst" />

                <TextView
                    android:id="@+id/txtSGST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_rupee"
                    android:drawablePadding="2dp"
                    android:padding="@dimen/padding_8dp"
                    app:layout_constraintBottom_toTopOf="@+id/txtGrandTotal"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCGST" />

                <TextView
                    android:id="@+id/total"
                    style="@style/textPrimaryHeadingNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_0dp"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/total"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sgst" />

                <TextView
                    android:id="@+id/txtGrandTotal"
                    style="@style/textPrimaryHeadingNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_0dp"
                    android:drawableStart="@drawable/ic_rupee_primary"
                    android:drawablePadding="2dp"
                    android:padding="@dimen/padding_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtSGST" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/margin_16dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_16dp">

            <TextView
                style="@style/textPrimaryHeadingNormal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:drawableEnd="@drawable/ic_arrow_checkout"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_16dp"
                android:text="@string/place_order"
                android:textColor="@color/colorWhiteText" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>