<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/viewGoToCart"
        app:layout_constraintBottom_toTopOf="@+id/viewGoToCart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_primary_background_reverse"
                android:paddingLeft="@dimen/padding_16dp"
                android:paddingTop="@dimen/padding_16dp"
                android:paddingRight="@dimen/padding_16dp"
                android:paddingBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/cuisinesPager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtBrowse"
                    style="@style/textPrimaryHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/browse"
                    android:textColor="@color/colorWhiteText"
                    app:layout_constraintBottom_toTopOf="@+id/etSearch"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/mylanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toTopOf="@+id/etSearch"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etSearch"
                    style="@style/editTextPrimaryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:background="@drawable/edittext_border_rounded_corner"
                    android:drawableEnd="@drawable/ic_search"
                    android:hint="@string/hintSearch"
                    android:inputType="text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtBrowse" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/cuisinesPager"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                app:layout_constraintBottom_toTopOf="@+id/layoutFamous"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutFamous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cuisinesPager">

                <TextView
                    android:id="@+id/txtFamousHeading"
                    style="@style/textPrimaryHeadingMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/famous_dishes"
                    app:layout_constraintBottom_toTopOf="@+id/rvFamousDishes"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFamousDishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtFamousHeading" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewGoToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-16dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="@color/colorBackgroundWhite"
        app:cardCornerRadius="@dimen/margin_16dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16dp">

                <TextView
                    android:id="@+id/txtCartItemCount"
                    style="@style/textPrimaryDarkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/colorWhiteText" />

                <TextView
                    style="@style/textPrimaryDarkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text=" | "
                    android:textColor="@color/colorWhiteText" />

                <TextView
                    android:id="@+id/txtTotal"
                    style="@style/textPrimaryDarkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:drawableStart="@drawable/ic_rupee_white"
                    android:drawablePadding="2dp"
                    android:textColor="@color/colorWhiteText" />
            </LinearLayout>

            <TextView
                style="@style/textPrimaryHeadingNormal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:drawableStart="@drawable/ic_cart"
                android:drawableEnd="@drawable/ic_arrow_checkout"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_16dp"
                android:text="@string/view_cart"
                android:textColor="@color/colorWhiteText" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>